--- a/HTML/UoE.html
+++ b/HTML/UoE.html
@@ -10,6 +10,7 @@
 </head>
 
 <body class="body">
+
     <div class="navigation">
         <img class="logo" src="/images/University Logo.png" alt="logo">
         <h1 class="title">UNIVERSITY OF EDINBURGH</h1>
@@ -38,6 +39,13 @@
                 <li>CARRER</li>
             </a>
         </ul>
+    </div>
+    <div class="a">
+        <h1 class="b"> NOT SURE WHERE TO START WITH GRADUATE STUDY?</h1>
+        <h2 class="c"> Let us introduce you to our courses, from post graduate certificate to doctorate.</h2>
+    </div>
+    <div class="f">
+        <h2 class="ff"> NEWS</h2>
     </div>
 </body>
 
