--- a/HTML/UoE.html
+++ b/HTML/UoE.html
@@ -11,41 +11,181 @@
 
 <body class="body">
 
-    <div class="navigation">
-        <img class="logo" src="/images/University Logo.png" alt="logo">
-        <h1 class="title">UNIVERSITY OF EDINBURGH</h1>
+    <div class="boss">
+
+        <div class="navigation">
+            <img class="logo" src="/images/University Logo.png" alt="logo">
+            <h1 class="title">UNIVERSITY OF EDINBURGH</h1>
+        </div>
+        <div class="nav">
+            <ul class="list">
+                <a href="#section1" class="uu">
+                    <li>HOME</li>
+                </a>
+                <a href="#section2" class="home">
+                    <li>ADMISSIONS</li>
+                </a>
+                <a href="#section3" class="home">
+                    <li>RESEARCH</li>
+                </a>
+                <a href="#section4" class="home">
+                    <li>NEWS</li>
+                </a>
+                <a href="https://www.ed.ac.uk/about" class="home">
+                    <li>ABOUT</li>
+                </a>
+                <a href="https://www.ed.ac.uk/alumni" class="home">
+                    <li>ALUMINI</li>
+                </a>
+                <a href="https://www.ed.ac.uk/alumni" class="home">
+                    <li>CARRER</li>
+                </a>
+            </ul>
+        </div>
     </div>
-    <div class="nav">
-        <ul class="list">
-            <a href="https://www.ed.ac.uk/" class="uu">
-                <li>HOME</li>
-            </a>
-            <a href="https://www.ed.ac.uk/studying" class="home">
-                <li>ADMISSIONS</li>
-            </a>
-            <a href="https://www.ed.ac.uk/research-innovation" class="home">
-                <li>RESEARCH</li>
-            </a>
-            <a href="https://www.ed.ac.uk/news" class="home">
-                <li>NEWS</li>
-            </a>
-            <a href="https://www.ed.ac.uk/about" class="home">
-                <li>ABOUT</li>
-            </a>
-            <a href="https://www.ed.ac.uk/alumni" class="home">
-                <li>ALUMINI</li>
-            </a>
-            <a href="https://www.ed.ac.uk/alumni" class="home">
-                <li>CARRER</li>
-            </a>
-        </ul>
-    </div>
-    <div class="a">
+    <div id="section1" class="a">
         <h1 class="b"> NOT SURE WHERE TO START WITH GRADUATE STUDY?</h1>
         <h2 class="c"> Let us introduce you to our courses, from post graduate certificate to doctorate.</h2>
     </div>
-    <div class="f">
-        <h2 class="ff"> NEWS</h2>
+    <br>
+    <div id="section2">
+        <h2 class="heado">
+            STUDYING AT EDINBURGH
+        </h2>
+    </div>
+
+    <div class="section">
+        <div>
+            <img src="/images/student 1.jpeg" alt="students" class="image1">
+            <div class="omg">
+                <a href="https://www.ed.ac.uk/studying/undergraduate" class="head1">
+                    <h2> Undergraduate Admissions</h2>
+                </a>
+            </div>
+        </div>
+        <div>
+            <img src="/images/students2.jpg" alt="student 2" class="image2">
+            <div class="omg">
+                <a href="https://www.ed.ac.uk/studying/postgraduate" class="head1">
+                    <h2> Postgraduate Admissions</h2>
+                </a>
+            </div>
+        </div>
+        <div>
+            <img src="/images/doctoral.webp" class="image3">
+            <div class="omg">
+                <a href="https://www.ed.ac.uk/studying/postgraduate" class="head1">
+                    <h2> Doctoral Studies</h2>
+                </a>
+            </div>
+        </div>
+        <div>
+            <img src="/images/professor 1.png" class="image4">
+            <div class="omg">
+                <a href="https://www.ed.ac.uk/students" class="head1">
+                    <h2>Current Students</h2>
+                </a>
+            </div>
+        </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <div class="mam">
+        <div id="section3">
+            <h2 class="heado">
+                RESEARCH
+            </h2>
+        </div>
+        <h3 class="text">
+            Edinburgh's research culture is united around three interconnected priorities: conducting research to the
+            highest standards of rigour, recognising the different skills and roles that contribute to research and
+            innovation, and supporting the career aspirations of our colleagues. Edinburgh’s research culture programme is
+            led by the PVC-Research, Patrick Grant, working in partnership with dedicated Academic Leads and with the
+            wider research leadership of Divisions, Departments, and Faculties. The institutional culture programme is
+            overseen by the University’s Research and Innovation Committee, and
+            is delivered by a team of academic and professional services colleagues.
+        </h3>
+        <div class="research1">
+            <div>
+                <img src="/images/large_biolaucm_42743482567.jpg" alt="pic" class="res">
+            </div>
+            <div>
+                <img src="/images/Writing research papers in English A guide for non-native speakers (original)_0.jpg" alt="pic" class="res">
+            </div>
+            <div>
+                <img src="/images/1674255143799.jpeg" alt="pic" class="res">
+            </div>
+        </div>
+        <div class="idk">
+            <div class="aaaa">
+                <h3 style="font-family: sans-serif;">
+                    Careers
+                </h3>
+                <p style="font-family: sans-serif;" style="text-align: justify">
+                    Assessing research fairly and inclusively, in an equitable working environment, and supporting
+                    members of the research and innovation community in their career aspirations
+                </p>
+            </div>
+            <div class="bbbb">
+                <h3 style="font-family: sans-serif;">
+                    Research Practice
+                </h3>
+                <p style="font-family: sans-serif;" style="text-align: center;">
+                    Enabling researchers to conduct reliable, reproducible, and transparent research and innovation, and
+                    thus ensure that Oxford research is trusted as meeting the highest standards of academic rigour
+                </p>
+            </div>
+            <div class="cccc">
+                <h3 style="font-family: sans-serif;">
+                    Valuing Contributions
+                </h3>
+                <p style="font-family: sans-serif;" style="text-align: justify;">
+                    Recognising a diversity of talents, skills, and outputs by valuing a broader range of contributions
+                    to
+                    excellence in research and innovation.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div id="section4">
+        <h2 class="heado">
+            NEWS
+        </h2>
+    </div>
+    <div class="newss">
+        <div>
+            <img src="/images/image 1.jpg" alt="news" class="news1">
+
+        </div>
+        <div>
+            <img src="/images/news2.jpg" alt="news" class="news1">
+
+        </div>
+        <div>
+            <img src="/images/news3.jpg" alt="news" class="news1">
+
+        </div>
+        <div>
+            <img src="/images/image 4.webp" alt="news" class="news1">
+
+        </div>
+    </div>
+    <br>
+    <div class="newss">
+        <h4>
+            Celebrating Academic Excellence and New Beginnings.</h4>
+        <h4>
+            Pioneering Research Unveils New Frontiers in Physics</h4>
+        <h4>
+            Edinburgh Students Rally for Palestinian Rights</h4>
+        <div class="last">
+            <h4 class="last1">
+                University COVID-19 Cases Rise at Campus Outbreaks</h4>
+        </div>
+
     </div>
 </body>
 
