--- a/HTML/UoE.html
+++ b/HTML/UoE.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>University of Edinburgh</title>
     <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" href="/images/favicon-32x32.png" type="image/png">
 </head>
 
 <body class="body">
@@ -58,7 +58,7 @@
         <div>
             <img src="/images/student 1.jpeg" alt="students" class="image1">
             <div class="omg">
-                <a href="https://www.ed.ac.uk/studying/undergraduate" target="_blank" class="head1">
+                <a href="http://127.0.0.1:5500/Page2/undergrad.html" target="_blank" class="head1">
                     <h3 style="font-family: sans-serif;">Undergraduate Admissions</h3>
                 </a>
             </div>
@@ -66,7 +66,7 @@
         <div>
             <img src="/images/students2.jpg" alt="student 2" class="image2">
             <div class="omg">
-                <a href="https://www.ed.ac.uk/studying/postgraduate" target="_blank" class="head1">
+                <a href="http://127.0.0.1:5500/Page3/postgraduate.html" target="_blank" class="head1">
                     <h3 style="font-family: sans-serif;">Postgraduate Admissions</h3>
                 </a>
             </div>
@@ -82,7 +82,7 @@
         <div>
             <img src="/images/professor 1.png" class="image4">
             <div class="omg">
-                <a href="https://www.ed.ac.uk/students" target="_blank" class="head1">
+                <a href="http://127.0.0.1:5500/Page4/student.html" target="_blank" class="head1">
                     <h3 style="font-family: sans-serif;"> Current Students</h3>
                 </a>
             </div>
