--- a/HTML/UoE.html
+++ b/HTML/UoE.html
@@ -74,7 +74,7 @@
         <div>
             <img src="/images/doctoral.webp" class="image3">
             <div class="omg">
-                <a href="https://www.ed.ac.uk/studying/postgraduate" target="_blank" class="head1">
+                <a href="http://127.0.0.1:5500/Page5/doctoral.html" target="_blank" class="head1">
                     <h3 style="font-family: sans-serif;"> Doctoral Studies</h3>
                 </a>
             </div>
@@ -241,7 +241,9 @@
         </div>
         <div>
             <div class="c3">
-                <h2 class="ss">Join Us</h2>
+                <a href="http://127.0.0.1:5500/Page6/career.html" target="_blank">
+                    <h2 class="ss">Join Us</h2>
+                </a>
             </div>
         </div>
     </div>
